# pre-commit-test

./: pyproject.toml
.githhub/workflows/: python-checks.yaml
.github/workflows/: python-checks.yaml
pre_commit_test/: test_ci.py
