[project]
name = "pre-commit-test"
version = "0.1.0"
description = ""
authors = [
    {name = "david georgette",email = "davidgeorgette974@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.9.7,<0.10.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
